# iris-client_core

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  agents.md  claude.md  install-deps.sh  iris
.github/workflows/: c-cpp.yml
.iris/: .iris.macros
debian/: changelog  control  copyright  rules
debian/source/: options
docs/: README.md  architecture.md  contributing.md  usage.md  user-guide.md
lib/commands/: commands.c  commands.h
lib/commands/alias/add/: alias_add.c  alias_add.h  alias_add.pl
lib/commands/alias/run/: alias_run.c  alias_run.h
lib/commands/branch/: branch.c  branch.pl
lib/commands/commit/: commit.c  commit.h  commit.pl
lib/commands/ignore/: ignore.c  ignore.h  ignore.pl
lib/commands/init/: init.c  init.h  init.pl
lib/commands/rebase/: rebase.c  rebase.h  rebase.pl
lib/commands/rebuild/: rebuild.c  rebuild.h  rebuild.pl
lib/commands/root/: root.c  root.h  root.pl
lib/components/: select.c
lib/git2_utils/: git2_utils.c  git2_utils.h
lib/network/: network.h
lib/parser/: eris_router.pl  iris_router.pl  parser.c  parser.h
lib/term/: term.c  term.h
lib/utils/: eris_template_utils.h  iris_template_types.h  iris_template_utils.c  iris_template_utils.h
packaging/: README.md
packaging/aur/: .SRCINFO  PKGBUILD  eris-cli-git-debug-r58.1b73e68-1-x86_64.pkg.tar.zst  eris-cli-git-r58.1b73e68-1-x86_64.pkg.tar.zst
packaging/aur/eris-client_core/: FETCH_HEAD  config  packed-refs
packaging/aur/eris-client_core/objects/pack/: pack-32251b48f1e2584692be37b30d9d2b0cfa1fa990.idx  pack-32251b48f1e2584692be37b30d9d2b0cfa1fa990.pack  pack-32251b48f1e2584692be37b30d9d2b0cfa1fa990.rev
packaging/aur/pkg/eris-cli-git/: .BUILDINFO  .MTREE  .PKGINFO
packaging/aur/pkg/eris-cli-git-debug/: .BUILDINFO  .MTREE  .PKGINFO
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/commands/: commands.c
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/commands/alias/run/: alias_run.h
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/commands/branch/: branch.c  branch.h
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/commands/commit/: commit.h
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/commands/init/: init.c  init.h
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/commands/rebase/: rebase.c
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/commands/rebuild/: rebuild.c  rebuild.h
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/commands/root/: root.c
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/components/: select.h
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/git2_utils/: git2_utils.c  git2_utils.h
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/network/: network.c
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/parser/: parser.c
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/term/: term.c  term.h
packaging/aur/pkg/eris-cli-git-debug/usr/src/debug/eris-cli-git/eris-client_core/lib/utils/: eris_template_types.h  eris_template_utils.c
packaging/deb/: README.md  _ppa-inner.sh  build-in-docker.sh  deploy.sh
src/: main.c  utils.c  utils.h
